--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -65,12 +65,15 @@
 {% if user_level == 1 %}    
 <div class="dashboard-row">
     <div class="dashboard-frame">
-        <h3>Cumulative Invigilation Hour</h3>
+        <h3>Actual Invigilation Hours</h3>
         <p class="dashboard-text" style="color:green;">{{ user_invigilationHour }}</p>
     </div>
-
     <div class="dashboard-frame">
-        <h3>Pending Invigilation Hour</h3>
+        <h3>Estimated Invigilation Hours</h3>
+        <p class="dashboard-text" style="color:lightblue;">{{ userCumulativeHours }}</p>
+    </div>
+    <div class="dashboard-frame">
+        <h3>Pending Invigilation Hours</h3>
         <p class="dashboard-text" style="color:blueviolet;">{{ user_pendingInvigilationHour }}</p>
     </div>
 </div><br>
