--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -70,7 +70,7 @@
     </div>
     <div class="dashboard-frame">
         <h3>Estimated Invigilation Hours</h3>
-        <p class="dashboard-text" style="color:lightblue;">{{ userCumulativeHours }}</p>
+        <p class="dashboard-text" style="color:lightblue;">{{ user_invigilationHour }}</p>
     </div>
     <div class="dashboard-frame">
         <h3>Pending Invigilation Hours</h3>
