--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -125,17 +125,13 @@
                                             {% set check_in = att.checkIn %}
                                             {% set check_out = att.checkOut %}
 
-                                            {# Clamp times to within the exam period #}
                                             {% set actual_start = [check_in, exam_start] | max %}
                                             {% set actual_end = [check_out, exam_end] | min %}
-
                                             {% set total_seconds = (actual_end - actual_start).total_seconds() %}
                                             {% if total_seconds < 0 %}
                                                 {% set total_seconds = 0 %}
                                             {% endif %}
-
-                                            <div style="color: green;">Total Invigilation Time</div>
-                                            <div><strong>: {{ (total_seconds / 3600) | round(2) }} hours</strong></div>
+                                            <div style="color: green;">Total Invigilation Time: {{ (total_seconds / 3600) | round(2) }} hours </div>
                                         {% endif %}
                                     </div>
                                 {% else %}
