--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -86,17 +86,14 @@
                                         {% set check_in = att.checkIn %}
                                         {% set check_out = att.checkOut %}
 
-                                        {# Clamp actual presence within the exam window #}
                                         {% set actual_start = [check_in, exam_start] | max %}
                                         {% set actual_end = [check_out, exam_end] | min %}
-
                                         {% set total_seconds = (actual_end - actual_start).total_seconds() %}
                                         {% if total_seconds < 0 %}
                                             {% set total_seconds = 0 %}
                                         {% endif %}
 
-                                        <div style="color: green;">Total Invigilation Time</div>
-                                        <div><strong>: {{ (total_seconds / 3600) | round(2) }} hours</strong></div>
+                                        <div style="color: green;">Total Invigilation Time: {{ (total_seconds / 3600) | round(2) }} hours</div>
                                     {% endif %}
                                 </div>
                             </td>
