--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -78,8 +78,8 @@
                             <!-- Check-in/out Time -->
                             <td>
                                 <div class="info-grid">
-                                    <div>Check-in Time</div><div><strong>: {{ att.checkIn }}</strong></div> 
-                                    <div>Check-out Time</div><div><strong>: {{ att.checkOut }}</strong></div>
+                                    <div>Check-in Time</div><div><strong>: {{ att.checkIn.strftime("%d/%b/%Y %H:%M:%S") if att.checkIn else "None" }}</strong></div>
+                                    <div>Check-out Time</div><div><strong>: {{ att.checkOut.strftime("%d/%b/%Y %H:%M:%S") if att.checkOut else "None" }}</strong></div>
                                 </div>
                                 {% if att.checkIn and att.checkOut %}
                                     {% set exam_start = att.report.exam.examStartTime %}
