--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -23,7 +23,7 @@
             <span style="width: 20px; height: 20px; background-color: #dc74f7; display: inline-block; border-radius: 4px;"></span>
             <span>Overnight Exam (Starts Today, Ends Tomorrow)</span>
         </div>
-    </div><br>
+    </div>
 
     <div class="calendar-container">
         {% for date, exams in calendar_data.items() %}
